added button styling

--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
 
     <div class="plate circle">
         <div class="cake circle">
-            <div class="writing">Happy Birthday!</div>
+            <div class="writing">Happy<br> Birthday!</div>
             <canvas id="missing"></div>
         </div>
     </div>
