--- a/index.html
+++ b/index.html
@@ -31,11 +31,11 @@
         <span>o</span>
         <span>x</span>
     </h1>
-    <h2 class = 'subheader'>Find the odds that two people will share a birthday.</h2>
+    <h2 class = 'subheader'>Find the odds that two people will share a birthday</h2>
 
     <div class="info">
         <p>
-            In a group of 
+            in a group of 
             <input oninput="this.value=this.value.replace(/(?![0-9])./gmi,'')" maxlength = "3" id = 'people' type="text">
             people 
         </p>
