added triplets & higher birth groups

--- a/index.html
+++ b/index.html
@@ -31,7 +31,9 @@
         <span>o</span>
         <span>x</span>
     </h1>
-    <h2 class = 'subheader'>Find the odds that two people will share a birthday</h2>
+    <h2 class = 'subheader'>Find the odds that 
+        <input oninput="this.value=this.value.replace(/(?![0-9])./gmi,'')" maxlength = "2" id = 'twins' type="text" value="2"> 
+        people will share a birthday</h2>
 
     <div class="info">
         <p>
